# bdqr_transmission_threshold_model

./: 0_global_setup.R  1_clean_data_sheets.R  1_data_setup.R  1_parameter_setup.R  2_analysis.R  README.md  tableA3.csv
bdqr_prev_data/: barilar2024.xlsx  barilar2024_clean.csv  blankson2024.csv  blankson2024_clean.csv  roberts2024.xlsx  roberts2024_clean.csv  timm2023.xlsx  timm2023_model_data.csv
c_simulation/: CMakeLists.txt  parameters.json  sim.cpp
c_simulation/inc/: common.cpp  common.h  xoshiro.h
stan/: hierarchical_binomial.stan
